# timesfm

./: .gitignore  COVARIATES_2P5.md  README.md  SETUP.md  pyproject.toml  quantile.md  quantile_covariates.md  requirements.txt
.venv_tbats/: pyvenv.cfg
notebooks/: covariates_2p5_example.ipynb  quantile_inventory_demo.ipynb  quantile_inventory_demo_covariates.ipynb  timesfm_example.ipynb  vn2_inventory_forecast.ipynb  vn2_submission_quantile.ipynb  vn2_submission_quantile_covariates.ipynb
src/timesfm/timesfm_2p5/: timesfm_2p5_base.py
