[tool.poetry]
name = "timesfm"
version = "2.0.0"
description = "A time series foundation model."
authors = [
    "Rajat Sen <senrajat@google.com>",
    "Yichen Zhou <yichenzhou@google.com>",
    "Abhimanyu Das <abhidas@google.com>",
    "Petros Mol <pmol@google.com>",
    "Michael Chertushkin <chertushkinmichael@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "timesfm", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=1.26.4"
huggingface_hub = { version = ">=0.23.0", extras = ["cli"] }
safetensors = ">=0.5.3"
torch = { version = ">=2.0.0", extras = ["cuda"] }
jax = { version = ">=0.4.0", optional = true }
jaxlib = { version = ">=0.4.0", optional = true }
scikit-learn = { version = ">=1.0.0", optional = true }
pandas = { version = ">=2.0.0", optional = true }
seaborn = { version = ">=0.13.0", optional = true }
statsmodels = { version = ">=0.14.0", optional = true }
tbats = { version = ">=1.1.0", optional = true }
lightgbm = { version = ">=4.0.0", optional = true }

[tool.poetry.extras]
covariates = ["jax", "jaxlib", "scikit-learn"]
analysis = ["pandas", "seaborn"]
benchmarks = ["statsmodels", "tbats", "lightgbm"]

[tool.ruff]
line-length = 88
indent-width = 2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

